--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-    "$schema": "https://biomejs.dev/schemas/2.2.4/schema.json",
+    "$schema": "https://biomejs.dev/schemas/2.2.6/schema.json",
     "vcs": {
         "enabled": false,
         "clientKind": "git",
@@ -7,7 +7,7 @@
     },
     "files": {
         "ignoreUnknown": false,
-        "includes": ["gui/frontend/**", "!gui/frontend/dist", "!gui/frontend/wailsjs"]
+        "includes": ["gui/frontend/**", "!gui/frontend/**/*.html", "!gui/frontend/dist", "!gui/frontend/wailsjs"]
     },
     "formatter": {
         "enabled": true,
