feat: Add DialogService integration, PreviewImageSideBySide component, and update TS bindings

--- a/biome.json
+++ b/biome.json
@@ -18,6 +18,9 @@
     "linter": {
         "enabled": true,
         "rules": {
+            "a11y": {
+                "useAltText": "off"
+            },
             "complexity": {
                 "noForEach": "off"
             },
