--- a/gui/frontend/tsconfig.json
+++ b/gui/frontend/tsconfig.json
@@ -12,7 +12,7 @@
         "noEmit": true,
         "jsx": "react-jsx",
         "strict": true,
-        "noUnusedLocals": true,
+        "noUnusedLocals": false,
         "noUnusedParameters": false,
         "noImplicitAny": false,
         "noFallthroughCasesInSwitch": true
