--- a/gui/frontend/package.json
+++ b/gui/frontend/package.json
@@ -11,15 +11,18 @@
         "lint": "biome lint"
     },
     "dependencies": {
+        "@emotion/react": "11.14.0",
+        "@emotion/styled": "11.14.1",
+        "@fontsource/roboto": "5.2.8",
+        "@mui/material": "7.3.4",
         "@tailwindcss/vite": "4.1.14",
         "@wailsio/runtime": "latest",
-        "flowbite-react": "0.12.9",
-        "immer": "^10.1.3",
+        "immer": "10.1.3",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "react-icons": "^5.5.0",
+        "react-icons": "5.5.0",
         "tailwindcss": "4.1.14",
-        "zustand": "^5.0.8"
+        "zustand": "5.0.8"
     },
     "devDependencies": {
         "@biomejs/biome": "2.2.6",
