feat: Integrate FileList and SidebarAutopilot

--- a/biome.json
+++ b/biome.json
@@ -33,7 +33,8 @@
     },
     "javascript": {
         "formatter": {
-            "quoteStyle": "single"
+            "quoteStyle": "single",
+            "jsxQuoteStyle": "single"
         }
     },
     "assist": {
