--- a/gui/frontend/tsconfig.json
+++ b/gui/frontend/tsconfig.json
@@ -15,7 +15,10 @@
         "noUnusedLocals": false,
         "noUnusedParameters": false,
         "noImplicitAny": false,
-        "noFallthroughCasesInSwitch": true
+        "noFallthroughCasesInSwitch": true,
+        "paths": {
+            "@/*": ["./src/*"]
+        }
     },
     "include": ["src"],
     "references": [
