--- a/gui/frontend/package.json
+++ b/gui/frontend/package.json
@@ -26,12 +26,13 @@
     },
     "devDependencies": {
         "@biomejs/biome": "2.2.6",
-        "@types/node": "^24.9.1",
+        "@types/node": "24.9.1",
         "@types/react": "19.2.2",
         "@types/react-dom": "19.2.2",
         "@vitejs/plugin-react": "5.0.4",
         "globals": "16.4.0",
         "jiti": "2.6.1",
+        "tailwind-scrollbar": "4.0.2",
         "typescript": "5.9.3",
         "vite": "7.1.10"
     }
