refactor: Move most of the image caching to the client side

--- a/biome.json
+++ b/biome.json
@@ -28,6 +28,9 @@
                 "noUnusedImports": "warn",
                 "useUniqueElementIds": "off"
             },
+            "suspicious": {
+                "noArrayIndexKey": "off"
+            },
             "recommended": true
         }
     },
