--- a/gui/frontend/package.json
+++ b/gui/frontend/package.json
@@ -18,6 +18,7 @@
         "@tailwindcss/vite": "4.1.14",
         "@wailsio/runtime": "latest",
         "immer": "10.1.3",
+        "path-browserify": "1.0.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "5.5.0",
@@ -28,6 +29,7 @@
     "devDependencies": {
         "@biomejs/biome": "2.2.6",
         "@types/node": "24.9.1",
+        "@types/path-browserify": "1.0.3",
         "@types/react": "19.2.2",
         "@types/react-dom": "19.2.2",
         "@vitejs/plugin-react": "5.0.4",
@@ -35,6 +37,6 @@
         "jiti": "2.6.1",
         "tailwind-scrollbar": "4.0.2",
         "typescript": "5.9.3",
-        "vite": "7.1.10"
+        "vite": "7.1.11"
     }
 }
