--- a/cmd/gui/frontend/package.json
+++ b/cmd/gui/frontend/package.json
@@ -22,8 +22,8 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "5.5.0",
+        "react-zoom-pan-pinch": "3.7.0",
         "tailwindcss": "4.1.14",
-        "xxhash-wasm": "1.1.0",
         "zustand": "5.0.8"
     },
     "devDependencies": {
