--- a/cmd/gui/frontend/package.json
+++ b/cmd/gui/frontend/package.json
@@ -17,7 +17,7 @@
         "@fontsource/roboto": "5.2.8",
         "@mui/material": "7.3.4",
         "@tailwindcss/vite": "4.1.14",
-        "@wailsio/runtime": "latest",
+        "@wailsio/runtime": "3.0.0-alpha.77",
         "immer": "10.1.3",
         "path-browserify": "1.0.1",
         "react": "18.2.0",
