--- a/cmd/gui/frontend/package.json
+++ b/cmd/gui/frontend/package.json
@@ -19,7 +19,7 @@
         "@tailwindcss/vite": "4.1.14",
         "@wailsio/runtime": "3.0.0-alpha.77",
         "immer": "10.1.3",
-        "path-browserify": "1.0.1",
+        "pathe": "2.0.3",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "5.5.0",
@@ -30,7 +30,6 @@
     "devDependencies": {
         "@biomejs/biome": "2.2.6",
         "@types/node": "24.9.1",
-        "@types/path-browserify": "1.0.3",
         "@types/react": "19.2.2",
         "@types/react-dom": "19.2.2",
         "@vitejs/plugin-react": "5.0.4",
