--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,8 @@ jobs:
   build-linux-amd64:
     runs-on: ubuntu-latest
     needs: [version]
+    env:
+      OTEL_ENDPOINT: ${{ secrets.OTEL_ENDPOINT }}
     steps:
       - name: Code checkout
         uses: actions/checkout@v5
@@ -52,7 +54,9 @@ jobs:
 
       - name: Build Linux binaries
         run: |
-          node scripts/replace.mjs utils/info.go "<version>=>${{ needs.version.outputs.VERSION }}"
+          node scripts/replace.mjs cmd/shared/constants.go "<version>=>${{ needs.version.outputs.VERSION }}"
+          node scripts/replace.mjs cmd/shared/constants.go "<otel>=>$OTEL_ENDPOINT"
+          node scripts/replace.mjs cmd/shared/constants.go "EnvDevelopment=>EnvProduction"
           task package archs=amd64
 
       - name: Save artifacts
@@ -64,6 +68,8 @@ jobs:
   build-linux-arm64:
     runs-on: ubuntu-24.04-arm
     needs: [version]
+    env:
+      OTEL_ENDPOINT: ${{ secrets.OTEL_ENDPOINT }}
     steps:
       - name: Code checkout
         uses: actions/checkout@v5
@@ -90,7 +96,9 @@ jobs:
 
       - name: Build Linux binaries
         run: |
-          node scripts/replace.mjs utils/info.go "<version>=>${{ needs.version.outputs.VERSION }}"
+          node scripts/replace.mjs cmd/shared/constants.go "<version>=>${{ needs.version.outputs.VERSION }}"
+          node scripts/replace.mjs cmd/shared/constants.go "<otel>=>$OTEL_ENDPOINT"
+          node scripts/replace.mjs cmd/shared/constants.go "EnvDevelopment=>EnvProduction"
           task package archs=arm64
 
       - name: Save artifacts
@@ -102,6 +110,8 @@ jobs:
   build-macos:
     runs-on: macos-latest
     needs: [version]
+    env:
+      OTEL_ENDPOINT: ${{ secrets.OTEL_ENDPOINT }}
     steps:
       - name: Code checkout
         uses: actions/checkout@v5
@@ -123,7 +133,9 @@ jobs:
 
       - name: Build MacOS binaries
         run: |
-          node scripts/replace.mjs utils/info.go "<version>=>${{ needs.version.outputs.VERSION }}"
+          node scripts/replace.mjs cmd/shared/constants.go "<version>=>${{ needs.version.outputs.VERSION }}"
+          node scripts/replace.mjs cmd/shared/constants.go "<otel>=>$OTEL_ENDPOINT"
+          node scripts/replace.mjs cmd/shared/constants.go "EnvDevelopment=>EnvProduction"
           task package archs='amd64 arm64'
 
       - name: Save artifacts
@@ -135,6 +147,8 @@ jobs:
   build-windows-amd64:
     runs-on: windows-latest
     needs: [version]
+    env:
+      OTEL_ENDPOINT: ${{ secrets.OTEL_ENDPOINT }}
     steps:
       - name: Code checkout
         uses: actions/checkout@v5
@@ -159,7 +173,9 @@ jobs:
 
       - name: Build Windows binaries
         run: |
-          node scripts/replace.mjs utils/info.go "<version>=>${{ needs.version.outputs.VERSION }}"
+          node scripts/replace.mjs cmd/shared/constants.go "<version>=>${{ needs.version.outputs.VERSION }}"
+          node scripts/replace.mjs cmd/shared/constants.go "<otel>=>$OTEL_ENDPOINT"
+          node scripts/replace.mjs cmd/shared/constants.go "EnvDevelopment=>EnvProduction"
           task package archs=amd64
 
       - name: Save artifacts
@@ -171,6 +187,8 @@ jobs:
   build-windows-arm64:
     runs-on: windows-11-arm
     needs: [version]
+    env:
+      OTEL_ENDPOINT: ${{ secrets.OTEL_ENDPOINT }}
     steps:
       - name: Code checkout
         uses: actions/checkout@v5
@@ -209,7 +227,9 @@ jobs:
           CC: aarch64-w64-mingw32-gcc
           CXX: aarch64-w64-mingw32-g++
         run: |
-          node scripts/replace.mjs utils/info.go "<version>=>${{ needs.version.outputs.VERSION }}"
+          node scripts/replace.mjs cmd/shared/constants.go "<version>=>${{ needs.version.outputs.VERSION }}"
+          node scripts/replace.mjs cmd/shared/constants.go "<otel>=>$OTEL_ENDPOINT"
+          node scripts/replace.mjs cmd/shared/constants.go "EnvDevelopment=>EnvProduction"
           task package archs=arm64
 
       - name: Save artifacts
