--- a/cmd/gui/frontend/package.json
+++ b/cmd/gui/frontend/package.json
@@ -15,6 +15,7 @@
         "@emotion/react": "11.14.0",
         "@emotion/styled": "11.14.1",
         "@fontsource/roboto": "5.2.8",
+        "@midudev/tailwind-animations": "0.2.0",
         "@mui/material": "7.3.4",
         "@tailwindcss/vite": "4.1.14",
         "@wailsio/runtime": "3.0.0-alpha.77",
