style: Move the Preview components to atomic design

--- a/cmd/gui/frontend/tsconfig.json
+++ b/cmd/gui/frontend/tsconfig.json
@@ -17,7 +17,8 @@
         "noImplicitAny": false,
         "noFallthroughCasesInSwitch": true,
         "paths": {
-            "@/*": ["./src/*"]
+            "@/*": ["./src/*"],
+            "@/bindings/*": ["./bindings/*"]
         }
     },
     "include": ["src"],
