--- a/cmd/gui/frontend/package.json
+++ b/cmd/gui/frontend/package.json
@@ -22,6 +22,7 @@
         "immer": "10.1.3",
         "pathe": "2.0.3",
         "react": "18.2.0",
+        "react-compare-slider": "3.1.0",
         "react-dom": "18.2.0",
         "react-icons": "5.5.0",
         "react-zoom-pan-pinch": "3.7.0",
