--- a/cmd/gui/frontend/package.json
+++ b/cmd/gui/frontend/package.json
@@ -20,6 +20,7 @@
         "@tailwindcss/vite": "4.1.14",
         "@wailsio/runtime": "3.0.0-alpha.78",
         "immer": "10.1.3",
+        "notistack": "3.0.2",
         "pathe": "2.0.3",
         "react": "18.2.0",
         "react-compare-slider": "3.1.0",
