feat: Create first draft of the Settings screen

--- a/cmd/gui/frontend/package.json
+++ b/cmd/gui/frontend/package.json
@@ -17,6 +17,7 @@
         "@fontsource/roboto": "5.2.8",
         "@midudev/tailwind-animations": "0.2.0",
         "@mui/material": "7.3.6",
+        "@mui/x-tree-view": "8.26.0",
         "@tailwindcss/vite": "4.1.14",
         "@wailsio/runtime": "3.0.0-alpha.78",
         "immer": "10.1.3",
